eZ Online Editor 5.0 extension Changelog

5.0rc11
* Fixed regression #014110: IE7 double every paragraph break on every edit
* Use sort_array from root node in Location drop down + use name as 2. sort rule
* Add support for role limitations on ezoe module and it's functions
* Alignment support for eZ Publish 4.1 (including all justify* buttons)

5.0rc10
* Fixed #14097: Custom-tags cause errors in var/error.log
* Fixed #14099: Default selections in add-hyperlink popup dialogue behave oddly
* Improved how csssize(4), htmlsize, cssborder handles default values
* Allow editor row height of 2 and 5
* Use larger popup dialog windows by default

5.0rc9
* Implemented possibility to have same control over general attributes in gui as 
  you have over custom attributes.
* Fixed regression #14080: Custom tags broken in rev 3390?

5.0rc8
* Added support for node relations
* Switched from using site.ini [MediaClassSettings]ImageClassIdentifiers[] to
  the setting already used by eZ Publish: content.ini [RelationGroupSettings]ImagesClassList[]
  Note: You need to change your settings as a result from this
* Added file button, and use 1 tempalte pr content type in upload and realated dialog.
  Note: New i18n strings in upload_* and tag_embed_* templates!
* updated to TinyMCE 3.2.1
* Misc i18n bugs fixed in pol-PL and nor-NO
* Added tablemenu, a splitbutton that puts all table commands into a sub menu to save menu space.
* Added support for TinyMCE spellchecker plugin (thx to Carlos Revillo)
* Fixed #13954: Applying a custom tag to a text can change this text
* Added custom tag view template for underline
* Implemented new custom attribute types: htmlsize, csssize, cssborder and csssize4
* Implemented possibility to limit some embed settings pr content type
* Fixed #13990: Text editor - Formatting bullets removes text
* Fixed #13755: Anchor not displaying anchor name in IE7/8 (WinXP) - 5.0.0rc7
* Implemented #13981: ini setting to disable popups from pathbar selections